Criando mapeamento simples de cadastro

--- a/petland-api/src/main/resources/application.properties
+++ b/petland-api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=petland-api
+
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/petland_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
